--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -6,10 +6,10 @@
         <title>Portfolio Page</title>
     </head>
     <body>
-        <img src="./blueface.jpeg" alt="blueface" 
-        style="width:300px;height:300px;"/><img src="./wedding.jpeg" alt="wedding" 
-        style="width:300px;height:300px;"/><img src="./furbaby.jpeg" alt="furbaby" 
-        style="width:300px;height:300px;"/><img src="./lildude.jpeg" alt="blueface" 
+        <img src="./images/blueface.jpeg" alt="blueface" 
+        style="width:300px;height:300px;"/><img src="./images/wedding.jpeg" alt="wedding" 
+        style="width:300px;height:300px;"/><img src="./images/furbaby.jpeg" alt="furbaby" 
+        style="width:300px;height:300px;"/><img src="./images/lildude.jpeg" alt="blueface" 
         style="width:300px;height:300px;"/><br>
         <h1 style="text-align:center;">Medina Softic</h1>
             
