--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Page</title>
+        <link rel="icon" type="image/png" href="images/programmer.png?v=1">
     </head>
     <body>
+        <div style="text-align: center; background-color:darkgrey; padding: 20px;">
+            <a style="color:black; padding-right: 150px; font-size: larger;" href="./profile-pg.html">Home</a>
+            <a style="color:black; padding-right: 150px; font-size: larger;" href="./portfolio.html">Portfolio</a>
+             <a style="color:black; padding-left: 150px; font-size: larger;" href="https://github.com/MedinaSoftic?tab=repositories">GitHub</a>
+        </div>
         <img src="./images/blueface.jpeg" alt="blueface" 
         style="width:300px;height:300px;"/><img src="./images/wedding.jpeg" alt="wedding" 
         style="width:300px;height:300px;"/><img src="./images/furbaby.jpeg" alt="furbaby" 
