--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -5,13 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Page</title>
+        <link rel="stylesheet" type="text/css" href="./styles.css">
         <link rel="icon" type="image/png" href="images/programmer.png?v=1">
     </head>
     <body>
-        <div style="text-align: center; background-color:darkgrey; padding: 20px;">
-            <a style="color:black; padding-right: 150px; font-size: larger;" href="./profile-pg.html">Home</a>
-            <a style="color:black; padding-right: 150px; font-size: larger;" href="./portfolio.html">Portfolio</a>
-             <a style="color:black; padding-left: 150px; font-size: larger;" href="https://github.com/MedinaSoftic?tab=repositories">GitHub</a>
+        <div style="text-align: center; background-color:darkgrey; padding: 50px;">
+            <a style="color:black; padding-right: 150px; font-size: 50px;" href="./profile-pg.html">Home</a>
+            <a style="color:black; padding-right: 150px; font-size: 50px;" href="./portfolio.html">Portfolio</a>
+            <a style="color:black; padding-left: 150px; font-size: 50px;" href="https://github.com/MedinaSoftic?tab=repositories">GitHub</a>
+            <a style="color:black; padding-left: 150px; font-size: 50px;" href="https://www.linkedin.com/in/medina-softic-363015200/">Linkedin</a>
+
         </div>
         <img src="./images/blueface.jpeg" alt="blueface" 
         style="width:300px;height:300px;"/><img src="./images/wedding.jpeg" alt="wedding" 
@@ -86,9 +89,9 @@
             <input type="submit" value="Submit">
         </form>
         <footer>
-            <p style="text-align:center;">Created by:<b>
-                Medina Softic</b><br>
-                2025/04.30</p>
+            © [2025] All rights reserved by Medina Softic <br>
+            <a style="color:black;" href="https://www.flaticon.com/free-icons/software-engineer" title="software engineer icons">Software engineer icons created by Icongeek - Flaticon</a>
+
         </footer>
     </body>
 
