--- a/html/profile-pg.html
+++ b/html/profile-pg.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div style="text-align: center; background-color:darkgrey; padding: 50px;">
-        <a style="color:black; padding-right: 350px; font-size: 50px" href="./profile-pg.html">Home</a>
+        <a style="color:black; padding-right: 150px; font-size: 50px;" href="./profile-pg.html">Home</a>
         <a style="color:black; padding-right: 150px; font-size: 50px;" href="./portfolio.html">Portfolio</a>
-         <a style="color:black; padding-left: 150px; font-size: 50px;" href="https://github.com/MedinaSoftic?tab=repositories">GitHub</a>
+        <a style="color:black; padding-left: 150px; font-size: 50px;" href="https://github.com/MedinaSoftic?tab=repositories">GitHub</a>
+        <a style="color:black; padding-left: 150px; font-size: 50px;" href="https://www.linkedin.com/in/medina-softic-363015200/">Linkedin</a>
+
     </div>
    
 
